@@ -457,6 +457,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Regression fix: suppress warning about session failure when clicking to
   edit with 'preview on first edit' enabled.
 * (bug 6230) Regression fix: <nowiki> in [URL link text]
+* Added AutoLoader.php, which loads classes without need of require_once()
 
 
 == Compatibility ==
